<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="16dp"
android:text="@string/tvNome"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCabelo"
        android:text="@string/tvCabelo"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:layout_gravity="left"
     />

    <TextView
        android:id="@+id/tvPele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPele"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:layout_gravity="left"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvData"
        android:text="@string/tvData"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:layout_gravity="left"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvGenero"
        android:text="@string/tvGenero"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:layout_gravity="left"
        />
</LinearLayout>